Implement thickness along with components
Signed-off-by: kiranpranay <pranay@cottonseeds.org>

--- a/templates/component_edit.html
+++ b/templates/component_edit.html
@@ -120,6 +120,16 @@
                             <label for="gpio" class="form-label">LED Pin</label>
                         </div>
                     </div>
+
+                    <!-- Default Thickness -->
+                    <div class="form-group">
+                        <div class="form-field-filled">
+                            <input type="number" id="default_thickness" name="default_thickness"
+                                   step="0.001" min="0" value="{{ comp.default_thickness }}"
+                                   placeholder=" " class="form-input">
+                            <label for="default_thickness" class="form-label">Default Thickness (mm)</label>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Image column (unchanged) -->
