--- a/templates/component_new.html
+++ b/templates/component_new.html
@@ -130,6 +130,13 @@
                maxlength="40" required placeholder="Enter component name">
       </div>
 
+      <!-- Default Thickness -->
+      <div class="form-field">
+        <label for="default_thickness">Default Thickness (mm)</label>
+        <input type="number" id="default_thickness" name="default_thickness"
+               step="0.001" min="0" placeholder="0.0">
+      </div>
+
       <!-- LED pin picker -->
       <div class="form-field">
         <label for="gpio">LED Pin</label>
